Loading Simple8b block starting with RLE is not initialized with correct previous value

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-11-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When building a stream of Simple8b blocks the encoder acts as if they are a long continuous stream.
      However, after every 16 blocks we write a control block. When a reader encounters the control block it re-initializes the decoders and default initialize the previous value to 0.
      If the first Simple8b block after the control code is an RLE block it will then use 0 as the previous instead of the correct value.

      To reproduce this you need a monotonically increasing value (like a counter) where we can get a RLE block for a value different than 0.

            Assignee:
            Henrik Edin
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: