SERVER-60885 Initialize Simple8b block with last value from previous Simple8b block

Needed in case the next Simple8b block starts with RLE